--- a/assets/css/basics/MainNav.css
+++ b/assets/css/basics/MainNav.css
@@ -1,9 +1,9 @@
 .apps-header {
-    background-color: whitesmoke;
-    border-bottom: 2px grey solid;
-    padding: 1em;
+  background: linear-gradient(to left, #f8b500, #fceabb);
+  border-bottom: 2px grey solid;
+  padding: 1em;
 }
 
 .apps-header a {
-    color: black;
+  color: black;
 }
