--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,30 +1,35 @@
 body {
-    margin: 0;
-    background-color: rgb(221, 225, 226);
-    font-family: Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  background-color: whitesmoke;
+  font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-size: 1em;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 1em;
 }
 
 button {
-    border: 1px black solid;
-    border-radius: .4em;
-    padding: .5em;
-    width: fit-content;
+  border: 1px black solid;
+  border-radius: 0.4em;
+  padding: 0.5em;
+  width: fit-content;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 img {
-    width: 100%;
-    object-fit: cover;
-    border-radius: .2em;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 0.2em;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
