--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -2,6 +2,13 @@ body {
   margin: 0px;
 }
 
+/* #9ba3b1 */
+
+/* APP MAIN  */
+.app-main {
+  width: 100%;
+  height: 100%;
+}
 /* HEADER */
 .email-header {
   display: flex;
@@ -18,12 +25,14 @@ body {
 }
 .email-list {
   margin-left: 20px;
+  background: linear-gradient(to right, #141e30, #243b55);
+  /* color: whitesmoke; */
 }
 
 /* EMAIL LIST */
 
 .email-list {
-  background-color: lightcoral;
+  background-color: #edf4fa;
   width: 70vw;
 }
 .email-list li {
@@ -31,9 +40,46 @@ body {
   justify-content: space-between;
   list-style: none;
   border-bottom: 1px gray solid;
-  margin-bottom: 10px;
   padding: 10px;
+  color: black;
 }
 .email-list li:hover {
   cursor: pointer;
+  opacity: 0.95;
+}
+.email-list ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* EMAIL PREVIEW */
+.unread {
+  background-color: rgba(255, 255, 255, 0.902);
+  font-weight: 700;
+  font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
+}
+.read {
+  background-color: rgba(242, 245, 245, 0.8);
+}
+/* MODAL */
+
+.email-add-section {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(242, 245, 245, 0.8);
+  color: black;
+}
+
+.email-add-section textarea {
+  margin: 15px;
+  border-radius: 10px;
+}
+.email-add-section input {
+  border-radius: 10px;
+  padding: 5px;
+  width: 80%;
+}
+.email-add-section button {
+  padding: 10px;
+  margin: 10px;
 }
