--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -5,10 +5,7 @@ body {
 /* #9ba3b1 */
 
 /* APP MAIN  */
-.app-main {
-  width: 100%;
-  height: 100%;
-}
+
 /* HEADER */
 .email-header {
   display: flex;
@@ -25,15 +22,14 @@ body {
 }
 .email-list {
   margin-left: 20px;
-  background: linear-gradient(to right, #141e30, #243b55);
+  /* background: linear-gradient(to right, #141e30, #243b55); */
   /* color: whitesmoke; */
 }
 
 /* EMAIL LIST */
 
 .email-list {
-  background-color: #edf4fa;
-  width: 70vw;
+  width: 80vw;
 }
 .email-list li {
   display: flex;
@@ -45,7 +41,9 @@ body {
 }
 .email-list li:hover {
   cursor: pointer;
-  opacity: 0.95;
+  opacity: 0.5;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
+    0 1px 3px 1px rgba(60, 64, 67, 0.149);
 }
 .email-list ul {
   margin: 0;
@@ -59,25 +57,31 @@ body {
   font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
 }
 .read {
-  background-color: rgba(242, 245, 245, 0.8);
+  background-color: #ded9d9;
 }
-/* MODAL */
+.email-delete-btn {
+  background-color: transparent;
+}
+
+/* MODAL ADD*/
 
 .email-add-section {
+  position: relative;
+  top: 20px;
   display: flex;
   flex-direction: column;
   background-color: rgba(242, 245, 245, 0.8);
   color: black;
+  width: 60vw;
 }
 
 .email-add-section textarea {
   margin: 15px;
-  border-radius: 10px;
 }
 .email-add-section input {
-  border-radius: 10px;
   padding: 5px;
   width: 80%;
+  margin-left: 10px;
 }
 .email-add-section button {
   padding: 10px;
