--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -62,6 +62,15 @@ body {
 .email-delete-btn {
   background-color: transparent;
 }
+.email-delete-btn:hover {
+  background-color: transparent;
+  background-color: blue;
+  color: whitesmoke;
+}
+input[type='checkbox']:hover {
+  cursor: pointer;
+  transform: scale(1.3);
+}
 
 /* MODAL ADD*/
 
