--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,10 @@ body {
 
 .grid {
   display: grid;
-  color: black;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-template-rows: masonry;
+    grid-auto-flow: dense;
 }
 
 /* flex-helpers */
