--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -70,6 +70,7 @@ header select {
   background-color: transparent;
   margin-left: 5px;
   margin-right: 5px;
+  border-radius: 0;
 }
 .email-delete-btn:hover {
   background-color: transparent;
@@ -84,24 +85,54 @@ input[type='checkbox']:hover {
 /* MODAL ADD*/
 
 .email-add-section {
-  position: relative;
-  top: 20px;
+  position: fixed;
+  bottom: 0px;
   display: flex;
   flex-direction: column;
   background-color: rgba(242, 245, 245, 0.8);
   color: black;
   width: 60vw;
+  /* background-color: #fff; */
+}
+.new-email-header {
+  background-color: #444446;
+  color: white;
+  padding: 10px;
+  border-top-left-radius: 10px 10px;
+  border-top-right-radius: 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  /* border-radius: 20px; */
+}
+.new-email-main-content {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 .email-add-section textarea {
-  margin: 15px;
+  margin-top: 10px;
+  border: 0;
+  resize: none;
 }
 .email-add-section input {
-  padding: 5px;
-  width: 80%;
-  margin-left: 10px;
+  width: 96%;
+  padding: 10px;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 0.5px solid black;
 }
-.email-add-section button {
+.new-email-main-content button {
   padding: 10px;
   margin: 10px;
+  background-color: #4285f4;
+  color: white;
+  outline: 0;
+}
+.close-new-email-btn {
+  margin: 0;
+  color: white;
+  background: none;
+  border: 0;
 }
