--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -29,8 +29,6 @@ header select {
 }
 .email-list {
   margin-left: 20px;
-  /* background: linear-gradient(to right, #141e30, #243b55); */
-  /* color: whitesmoke; */
 }
 
 /* EMAIL LIST */
@@ -46,6 +44,7 @@ header select {
   padding: 10px;
   color: black;
 }
+
 .email-list li:hover {
   cursor: pointer;
   opacity: 0.5;
@@ -80,6 +79,15 @@ header select {
 input[type='checkbox']:hover {
   cursor: pointer;
   transform: scale(1.3);
+}
+.email-details-container {
+  display: flex;
+  justify-content: space-between;
+  color: black;
+}
+
+li a {
+  flex-grow: 1;
 }
 
 /* MODAL ADD*/
@@ -129,10 +137,39 @@ input[type='checkbox']:hover {
   background-color: #4285f4;
   color: white;
   outline: 0;
+  border: none;
 }
 .close-new-email-btn {
   margin: 0;
   color: white;
   background: none;
   border: 0;
+}
+
+/* EMAIL DETAILS */
+
+.email-details {
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+.email-details h1 {
+  margin-top: 50px;
+  font-weight: 400;
+}
+.email-details pre {
+  padding: 40px;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  background-color: #f5f7f8;
+  /* text-align: center; */
+}
+.email-details-main-content {
+  margin-left: 40px;
+  margin-right: 40px;
 }
