--- a/apps/Keep/assets/css/EditContainer.css
+++ b/apps/Keep/assets/css/EditContainer.css
@@ -44,8 +44,8 @@
     background-color: white;
 }
 
-.btn-color.brown {
-    background-color: rgb(230, 201, 168);
+.btn-color.yellow {
+    background-color:rgb(246, 221, 152);
 }
 
 .btn-color.pink {
