--- a/apps/Keep/assets/css/KeepMain.css
+++ b/apps/Keep/assets/css/KeepMain.css
@@ -1,3 +1,4 @@
 @import './NotesContainer.css';
-@import './SearchArea.css';
+@import './AddArea.css';
 @import './EditContainer.css';
+@import './SearchArea.css';
