--- a/apps/Keep/assets/css/NotesContainer.css
+++ b/apps/Keep/assets/css/NotesContainer.css
@@ -1,18 +1,24 @@
+/* .notes-container {
+    flex-direction: column;
+    max-height: 800px;
+    overflow-wrap: unset;
+    clear: both;
+    position: relative;
+} */
 
 .notes-container .note {
     width: 200px;
+    height: fit-content;
     border: 1px solid grey;
     border-radius: .2em;
     margin: 1em;
     padding: 1em;
-}
-
-.note {
-    height: fit-content;
-}
-
-.note:hover {
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
+    transition: .1s;
+}
+
+.notes-container .note:hover {
+    box-shadow: 0 4px 8px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
 }
 
 .text-card {
