--- a/apps/Keep/assets/css/SearchArea.css
+++ b/apps/Keep/assets/css/SearchArea.css
@@ -1,33 +1,35 @@
 .search-area {
-    text-align: center;
-    margin: 1em auto;
+    /* position: absolute;
+    top: 103px;
+    left: 10px; */
+    width: 500px;
+    margin: .5em auto;
+    margin-bottom: 0;
+    text-align: start;
     padding: .2em;
+    line-height: 47px;
     background-color: white;
     border: 1px solid grey;
     border-radius: .5em;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
-    width: 500px;
-}
-
-.search-area * {
-    margin: .5em;
 }
 
 .search-area input {
     border: none;
-    width: 300px;
-    margin-inline-end: 3em;
 }
 
-.search-area :focus {
-    outline-style: none;
-}
-
-.search-area form i {
+.search-area .search-btn {
+    font-size: 1.5em;
     opacity: 0.6;
+    margin-inline-start: .5em;
+    margin-inline-end: .5em;
 }
 
-.search-area form i:hover {
+.search-area .search-btn:hover {
     cursor: pointer;
     opacity: 1;
+}
+
+.search-area input:focus {
+    outline-style: none;
 }
