--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   background-color: whitesmoke;
   font-family: Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(34, 32, 32);
 }
 
 h1,
