--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,11 +18,19 @@ body {
 
 /* grid-helpers */
 
-.grid {
+/* .grid {
   display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     grid-template-rows: masonry;
+    grid-auto-flow: dense;
+} */
+
+.grid {
+  display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, 50px);
+    grid-template-rows: repeat(auto-fill, 50px);
     grid-auto-flow: dense;
 }
 
