--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -65,6 +65,9 @@ header select {
 .read {
   background-color: #ded9d9;
 }
+.star-btn-active {
+  background-color: gold;
+}
 .email-delete-btn {
   background-color: transparent;
   margin-left: 5px;
@@ -157,19 +160,27 @@ li a {
 }
 .email-details h1 {
   margin-top: 50px;
-  font-weight: 400;
 }
 .email-details pre {
   padding: 40px;
   white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
-  word-wrap: break-word;
+  /* word-wrap: break-word; */
   background-color: #f5f7f8;
   /* text-align: center; */
+  width: fit-content;
+  font-size: 1.3rem;
 }
 .email-details-main-content {
   margin-left: 40px;
   margin-right: 40px;
+}
+.email-details h2,
+h3 {
+  font-weight: 400;
+}
+
+/* SIDE BAR  */
+.email-side-bar {
+  display: flex;
+  flex-direction: column;
 }
