--- a/apps/Keep/assets/css/AddArea.css
+++ b/apps/Keep/assets/css/AddArea.css
@@ -15,12 +15,12 @@
 
 .add-area input {
     border: none;
-    width: 300px;
+    width: 250px;
     margin-inline-end: 3em;
 }
 
 .add-area input[name='title'] {
-    width: 88%;
+    width: 78%;
     border-bottom: 1px solid rgb(196, 194, 194);
     /* font-weight: 600; */
 }
@@ -33,7 +33,29 @@
     opacity: 0.6;
 }
 
+.add-area form .fa-info {
+    position: absolute;
+    transform: translateX(-35px);
+    width: 20px;
+    height: 20px;
+    opacity: 1;
+}
+
 .add-area form i:hover {
     cursor: pointer;
     opacity: 1;
+}
+
+.add-area .info {
+    position: absolute;
+    transform: translateY(10%);
+    text-align: start;
+    width: 450px;
+    overflow: hidden;
+    padding: .2em;
+    border: 1px solid grey;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
+    transition: 1s;
 }
