--- a/apps/Keep/assets/css/NotesContainer.css
+++ b/apps/Keep/assets/css/NotesContainer.css
@@ -3,23 +3,20 @@
     column-gap: 1.5em;
     margin: 0 auto 2em;
     vertical-align: baseline;
-    text-align: center;
 }
 
 .notes-container .note {
-    /* width: 200px;
-    height: fit-content; */
     display: inline-block;
     border: 1px solid grey;
     border-radius: .2em;
     margin: 1em;
     padding: 1em;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
-    transition: .1s;
+    transition: .5s;
 }
 
 .notes-container .note:hover {
-    box-shadow: 0 4px 8px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
+    box-shadow: 0 8px 12px 0 rgba(60, 64, 67, 0.302), 0 4px 8px 4px rgba(60, 64, 67, 0.149);
 }
 
 .text-card {
@@ -59,5 +56,8 @@
 @media screen and (max-width: 500px) {
     .notes-container {
         column-count: 1;
+    }
+    .notes-container .note {
+        width: 85%;
     }
 }
