--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -1,207 +1,17 @@
+@import './MailHeader.css';
+@import './MailList.css';
+@import './MailPreview.css';
+@import './MailAdd.css';
+@import './MailDetails.css';
+@import './MailSideBar.css';
 body {
   margin: 0px;
 }
 
-/* #9ba3b1 */
-
 /* APP MAIN  */
 
-/* HEADER */
-.email-header {
-  display: flex;
-  justify-content: space-evenly;
-
-  margin-top: 20px;
-}
-.email-input-search {
-  padding: 10px;
-}
-header select {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-/* MAIN */
 .email-main {
   display: flex;
   justify-content: center;
   margin-top: 20px;
-}
-.email-list {
-  margin-left: 20px;
-}
-
-/* EMAIL LIST */
-
-.email-list {
-  width: 80vw;
-}
-.email-list li {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  border-bottom: 1px gray solid;
-  padding: 15px;
-  color: black;
-}
-
-.email-list li:hover {
-  cursor: pointer;
-  opacity: 0.5;
-  box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
-    0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
-}
-.email-list ul {
-  margin: 0;
-  padding: 0;
-}
-
-/* EMAIL PREVIEW */
-.unread {
-  background-color: rgba(255, 255, 255, 0.902);
-  font-weight: 700;
-  font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
-}
-.read {
-  background-color: #ded9d9;
-}
-.star-btn-active {
-  color: #e7c046;
-}
-
-.email-delete-btn {
-  background-color: transparent;
-  margin-left: 5px;
-  margin-right: 5px;
-  border-radius: 0;
-}
-.email-delete-btn:hover {
-  background-color: transparent;
-  text-shadow: 0 0 10px red;
-}
-input[type='checkbox']:hover {
-  cursor: pointer;
-  transform: scale(1.3);
-}
-.email-details-container {
-  display: flex;
-  justify-content: space-between;
-  color: black;
-}
-
-li a {
-  flex-grow: 1;
-}
-
-/* MODAL ADD*/
-.email-add-section-show {
-  transform: translateY(0%);
-}
-
-.email-add-section {
-  position: fixed;
-  bottom: 0px;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(242, 245, 245, 0.8);
-  color: black;
-  width: 60vw;
-  /* transform: translateY(100%); */
-  /* transition: all 2s; */
-  /* background-color: #fff; */
-}
-.new-email-header {
-  background-color: #444446;
-  color: white;
-  padding: 10px;
-  border-top-left-radius: 10px 10px;
-  border-top-right-radius: 10px 10px;
-  display: flex;
-  justify-content: space-between;
-  /* border-radius: 20px; */
-}
-.new-email-main-content {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-}
-
-.email-add-section textarea {
-  margin-top: 10px;
-  border: 0;
-  resize: none;
-}
-.email-add-section input {
-  width: 96%;
-  padding: 10px;
-  border: 0;
-  outline: 0;
-  background: transparent;
-  border-bottom: 0.5px solid black;
-}
-.new-email-main-content button {
-  padding: 10px;
-  margin: 10px;
-  background-color: #4285f4;
-  color: white;
-  outline: 0;
-  border: none;
-}
-.close-new-email-btn {
-  margin: 0;
-  color: white;
-  background: none;
-  border: 0;
-}
-
-/* EMAIL DETAILS */
-
-.email-details {
-  width: 100vw;
-  height: 100vh;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-}
-.email-details h1 {
-  margin-top: 50px;
-}
-.email-details pre {
-  padding: 40px;
-  white-space: pre-wrap;
-  /* word-wrap: break-word; */
-  background-color: #f5f7f8;
-  /* text-align: center; */
-  width: fit-content;
-  font-size: 1.3rem;
-}
-.email-details-main-content {
-  margin-left: 40px;
-  margin-right: 40px;
-}
-.email-details h2,
-h3 {
-  font-weight: 400;
-}
-
-/* SIDE BAR  */
-.email-side-bar {
-  display: flex;
-  flex-direction: column;
-}
-.email-side-bar .btn-compose {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.email-side-bar .btn-compose:hover {
-  cursor: pointer;
-  text-shadow: 0 0 10px blue;
-}
-.starred-btn {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
