--- a/apps/Mail/assets/css/MailHeader.css
+++ b/apps/Mail/assets/css/MailHeader.css
@@ -1,24 +1,26 @@
 /* HEADER */
-header{
+header {
   width: 500px;
   margin: 0 auto;
 }
 .email-header {
   width: 400px;
-  margin: .5em auto;
+  margin: 0.5em auto;
   margin-bottom: 0;
   text-align: start;
-  padding: .8em;
+  padding: 0.8em;
   background-color: white;
   border: 1px solid grey;
-  border-radius: .5em;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  border-radius: 0.5em;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
+    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+  margin-inline-end: 20px;
 }
 
 .email-header .search-btn {
   font-size: 1.5em;
   opacity: 0.6;
-  margin-inline-end: 1em;
+  padding-inline-end: 20px;
 }
 
 .email-header .search-btn:hover {
@@ -28,9 +30,8 @@ header{
 
 .email-input-search {
   border: none;
-  width: 250px;
-  margin-inline-start: .3em;
-  margin-inline-end: 1.1em;
+  margin-inline-start: 0.3em;
+  margin-inline-end: 3em;
 }
 
 .email-input-search:focus {
@@ -40,17 +41,19 @@ header{
 .email-header select {
   border: none;
   border-inline-start: 1px solid grey;
-  padding: .4em;
+  padding: 0.4em;
 }
 
 .email-header select:focus {
   outline-style: none;
 }
 
-i.unread-mails{
-  font-size: 2em;
+i.unread-mails {
+  font-size: 1.5em;
 }
-
+.status-icon {
+  font-size: 1.5em;
+}
 
 /* --------------------------------------------------------------------------------------------- */
 
