--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -15,3 +15,35 @@ body {
   justify-content: center;
   margin-top: 20px;
 }
+.app-main {
+}
+
+@media screen and (max-width: 960px) {
+  .app-main {
+    width: 800px;
+  }
+  .email-list li {
+    height: 60px;
+  }
+  .sender-name {
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 810px) {
+  .app-main {
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+  }
+  .email-main {
+    flex-direction: column;
+  }
+  .subject-email {
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 710px) {
+  .app-main {
+    width: 500px;
+  }
+}
