--- a/apps/Keep/assets/css/EditContainer.css
+++ b/apps/Keep/assets/css/EditContainer.css
@@ -27,8 +27,54 @@
 }
 
 .note:hover .keep-tools {
-   opacity: 1;
+    opacity: 1;
 }
+
+/* EDIT NOTE */
+
+.tools-container .edit-note {
+    opacity: 0;
+    /* margin-top: .5em; */
+    transition: .5s;
+    z-index: 1;
+}
+
+.note:hover .edit-note {
+    opacity: 1;
+}
+
+.edit-note input {
+    flex-grow: 1;
+    margin-top: .5em;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 2px;
+    background-color: rgb(236, 234, 234);
+}
+
+.edit-note input:focus {
+    outline-style: none;
+}
+
+.btn-container>* {
+    margin-top: .3em;
+    flex-grow: 1;
+    padding: 0.5em 1em;
+    border: none;
+    border-radius: 2px;
+    background-color: lightgrey;
+    cursor: pointer;
+}
+
+.btn-container>*:hover {
+    border: 1px solid grey;
+}
+
+.btn-container .save-btn {
+    margin-inline-end: .5em;
+}
+
+/* COLORS PALETTE */
 
 .btn-color {
     width: 20px;
@@ -51,7 +97,7 @@
 }
 
 .btn-color.yellow {
-    background-color:rgb(246, 221, 152);
+    background-color: rgb(246, 221, 152);
 }
 
 .btn-color.pink {
