--- a/assets/css/basics/HomePage.css
+++ b/assets/css/basics/HomePage.css
@@ -1,3 +1,20 @@
-body{
-    margin: 0;
+.home-page {
+    text-align: center;
+}
+
+.home-page img{
+    width: 500px;
+}
+
+.home-page h1 {
+    margin-top: 2em;
+    margin-bottom: .5em;
+    font-size: 5em;
+    font-weight: 500;
+    color: #d93025;
+}
+
+.home-page h2 {
+    font-size: 2.5em;
+    font-weight: 400;
 }
