--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: whitesmoke;
+  background-color: white;
   font-family: Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(34, 32, 32);
 }
