--- a/apps/Mail/assets/css/MailList.css
+++ b/apps/Mail/assets/css/MailList.css
@@ -3,6 +3,7 @@
 .email-list {
   /* width: 80vw; */
   flex-grow: 8;
+  font-size: 1rem;
 }
 
 .email-list li {
@@ -20,7 +21,8 @@
   cursor: pointer;
   opacity: 0.8;
   /* box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15); */
-  box-shadow: 0 2px 4px 0 rgba(60, 64, 67, 0.302), 0 4px 8px 4px rgba(60, 64, 67, 0.149);
+  box-shadow: 0 2px 4px 0 rgba(60, 64, 67, 0.302),
+    0 4px 8px 4px rgba(60, 64, 67, 0.149);
 }
 
 .email-list ul {
