--- a/apps/Mail/assets/css/MailHeader.css
+++ b/apps/Mail/assets/css/MailHeader.css
@@ -4,7 +4,6 @@
   margin: 0 auto;
 }
 .email-header {
-  width: 400px;
   margin: 0.5em auto;
   margin-bottom: 0;
   text-align: start;
@@ -15,11 +14,13 @@
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 2px 6px 2px rgba(60, 64, 67, 0.149);
   margin-inline-end: 20px;
+  display: flex;
 }
 
 .email-header .search-btn {
   font-size: 1.5em;
   opacity: 0.6;
+  width: 250px;
 }
 
 .email-header .search-btn:hover {
@@ -30,7 +31,7 @@
 .email-input-search {
   border: none;
   margin-inline-start: 0.3em;
-  margin-inline-end: 3em;
+  margin-inline-end: 2em;
 }
 
 .email-input-search:focus {
@@ -54,49 +55,11 @@ i.unread-mails {
   font-size: 1.5em;
 }
 
+.btns-header-actions {
+  margin-inline-start: 20px;
+  display: flex;
+}
+.btns-header-actions i {
+  padding-right: 15px;
+}
 /* --------------------------------------------------------------------------------------------- */
-
-/* .search-area {
-  width: 500px;
-  margin: .5em auto;
-  margin-bottom: 0;
-  text-align: start;
-  padding: .2em;
-  height: 45px;
-  background-color: white;
-  border: 1px solid grey;
-  border-radius: .5em;
-  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
-}
-
-.search-area input {
-  border: none;
-  width: 350px;
-}
-
-.search-area select {
-  border: none;
-  border-inline-start: 1px solid grey;
-  padding: .4em;
-}
-
-.search-area select:focus {
-  outline-style: none;
-}
-
-.search-area .search-btn {
-  font-size: 1.5em;
-  opacity: 0.6;
-  margin-inline-start: .5em;
-  margin-inline-end: .5em;
-}
-
-.search-area .search-btn:hover {
-  cursor: pointer;
-  opacity: 1;
-}
-
-.search-area input:focus {
-  outline-style: none;
-}
- */
