--- a/apps/Mail/assets/css/MailMain.css
+++ b/apps/Mail/assets/css/MailMain.css
@@ -9,7 +9,7 @@ body {
 }
 
 .app-main {
-  padding: 0 2em;
+  padding: 0.3em;
 }
 
 .sender-name {
@@ -33,15 +33,47 @@ body {
 /* .app-main {
 } */
 
+.menu-btn {
+  display: none;
+}
+
+.main-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgb(0 0 0 / 70%);
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+
+  transition: opacity 0.8s;
+}
+
+.main-screen.savta {
+  visibility: visible;
+  opacity: 1;
+}
+.hamburger-btn {
+  font-size: 2em;
+}
+
 @media screen and (max-width: 960px) {
   .app-main {
     width: 800px;
   }
   .email-list li {
-    height: 60px;
+    height: 70px;
   }
   .sender-name {
     padding-right: 10px;
+  }
+  .main-header-email {
+    flex-direction: column;
+  }
+  .email-header {
+    margin-bottom: 10px;
   }
 }
 
@@ -56,6 +88,33 @@ body {
   }
   .subject-email {
     padding-right: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+  }
+  .menu-btn {
+    display: block;
+  }
+  .email-side-bar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    background-color: rgb(255 255 255 / 90%);
+    border-left: 1px solid #d6d6d6;
+    flex-direction: column;
+    transform: translateX(-100%);
+
+    transition: transform 0.8s;
+  }
+
+  .email-side-bar.open-menu {
+    transform: translateX(0);
+  }
+  .main-header-email {
+    width: auto;
   }
 }
 
