--- a/apps/Mail/assets/css/MailDetails.css
+++ b/apps/Mail/assets/css/MailDetails.css
@@ -6,19 +6,13 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
+  padding-top: 150px;
 }
-
-/* .email-details h1 {
-  margin-top: 50px;
-} */
 
 .email-details pre {
   padding: 40px;
   white-space: pre-wrap;
-  /* word-wrap: break-word; */
   background-color: #f5f7f8;
-  /* text-align: center; */
-  /* width: fit-content; */
   font-size: 1.3rem;
 }
 
