--- a/apps/Keep/assets/css/SearchArea.css
+++ b/apps/Keep/assets/css/SearchArea.css
@@ -44,3 +44,9 @@
 .search-area input:focus {
     outline-style: none;
 }
+
+@media screen and (max-width: 600px){
+    .search-area{
+        width: 300px
+    }
+}
