--- a/apps/Keep/assets/css/AddArea.css
+++ b/apps/Keep/assets/css/AddArea.css
@@ -58,3 +58,12 @@
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
     transition: 1s;
 }
+
+@media screen and (max-width: 600px) {
+    .add-area {
+        width: 300px
+    }
+    .add-area form .fa-info {
+        transform: translateX(-20px);
+    }
+}
